Updated text color for bosses and items

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -12,12 +12,12 @@
   "itemgroup.civilizations": "Civilizations",
   "entity.civilizations.egypt_civilian": "Egyptian",
   "entity.civilizations.egypt_npc": "Egyptian",
-  "entity.civilizations.egypt_boss": "Pharaoh Khufu",
+  "entity.civilizations.egypt_boss": "§e§lPharaoh Khufu",
   "block.civilizations.trading_station": "Trading Station",
   "block.civilizations.tombstone": "Tombstone",
   "block.civilizations.coffin_top": "Coffin Top",
   "block.civilizations.coffin_bottom": "Coffin Bottom",
-  "item.civilizations.egypt_crook": "Pharaoh's Crook",
+  "item.civilizations.egypt_crook": "§ePharaoh's Crook",
   "effect.civilizations.curse_of_ra": "Curse of Ra",
 
   "item.civilizations.china_key": "Chinese Key",
@@ -25,8 +25,8 @@
   "entity.civilizations.china_civilian": "Chinese",
   "entity.civilizations.china_guard": "Chinese Guard",
   "item.civilizations.china_coin": "Banliang",
-  "item.civilizations.china_sword": "Sword of Goujian",
-  "entity.civilizations.china_boss": "Emperor Qin Shi Huang",
+  "item.civilizations.china_sword": "§8Sword of Goujian",
+  "entity.civilizations.china_boss": "§4§lEmperor Qin Shi Huang",
   "item.civilizations.high_mountains_music_disc": "Music Disc",
   "item.civilizations.high_mountains_music_disc.desc": "Bo Ya - High Mountains and Flowing Water",
   "subtitles.civilizations.high_mountains_and_flowing_water": "High Mountains and Flowing Water",
@@ -35,15 +35,15 @@
   "subtitles.civilizations.autumn_moon_over_han_palace": "Autumn Moon Over Han Palace",
   "block.civilizations.china_chest": "Chinese Chest",
 
-  "item.civilizations.nordic_battle_axe": "Norse Battle Axe",
+  "item.civilizations.nordic_battle_axe": "§1Norse Battle Axe",
   "entity.civilizations.nordic_civilian": "Viking",
-  "entity.civilizations.nordic_boss": "King Björn Ironside",
+  "entity.civilizations.nordic_boss": "§9§lKing Björn Ironside",
 
   "item.civilizations.greece_key": "Greek Key",
   "block.civilizations.greece_chest": "Greek Chest",
   "entity.civilizations.greece_civilian": "Greek",
-  "entity.civilizations.greece_boss": "Alexander The Great",
-  "item.civilizations.greece_sword": "Kopis",
+  "entity.civilizations.greece_boss": "§f§lAlexander The Great",
+  "item.civilizations.greece_sword": "§7Kopis",
   "item.civilizations.greece_coin": "Drachma",
 
   "entity.civilizations.rome_civilian": "Roman",
@@ -51,8 +51,8 @@
   "item.civilizations.rome_key": "Roman Key",
   "item.civilizations.rome_key_fragment": "Roman Key Fragment",
   "block.civilizations.rome_chest": "Roman Chest",
-  "entity.civilizations.rome_boss": "General Julius Caesar",
-  "item.civilizations.rome_sword": "Crocea Mors",
+  "entity.civilizations.rome_boss": "§c§lGeneral Julius Caesar",
+  "item.civilizations.rome_sword": "§eCrocea Mors",
   "entity.civilizations.rome_guard": "Roman",
 
   "item.civilizations.sharpness_book": "Enchanted Book",
@@ -66,54 +66,54 @@
   "item.civilizations.depth_strider_book": "Enchanted Book",
   "item.civilizations.efficiency_book": "Enchanted Book",
   "item.civilizations.fortune_book": "Enchanted Book",
-  "tooltip.civilizations.sharpness_book": "Sharpness IV",
-  "tooltip.civilizations.power_book": "Power III",
-  "tooltip.civilizations.fire_aspect_book": "Fire Aspect II",
-  "tooltip.civilizations.unbreaking_book": "Unbreaking III",
-  "tooltip.civilizations.protection_book": "Protection III",
-  "tooltip.civilizations.feather_falling_book": "Feather Falling III",
-  "tooltip.civilizations.thorns_book": "Thorns II",
-  "tooltip.civilizations.frost_walker_book": "Frost Walker II",
-  "tooltip.civilizations.depth_strider_book": "Depth Strider III",
-  "tooltip.civilizations.efficiency_book": "Efficiency IV",
-  "tooltip.civilizations.fortune_book": "Fortune III",
+  "tooltip.civilizations.sharpness_book": "§7Sharpness IV",
+  "tooltip.civilizations.power_book": "§7Power III",
+  "tooltip.civilizations.fire_aspect_book": "§7Fire Aspect II",
+  "tooltip.civilizations.unbreaking_book": "§7Unbreaking III",
+  "tooltip.civilizations.protection_book": "§7Protection III",
+  "tooltip.civilizations.feather_falling_book": "§7Feather Falling III",
+  "tooltip.civilizations.thorns_book": "§7Thorns II",
+  "tooltip.civilizations.frost_walker_book": "§7Frost Walker II",
+  "tooltip.civilizations.depth_strider_book": "§7Depth Strider III",
+  "tooltip.civilizations.efficiency_book": "§7Efficiency IV",
+  "tooltip.civilizations.fortune_book": "§7Fortune III",
 
-  "item.civilizations.greece_core": "Greek Core",
-  "item.civilizations.artemis_core": "Greek Core",
-  "tooltip.civilizations.artemis_core": "Summon Artemis",
+  "item.civilizations.greece_core": "§7Greek Core",
+  "item.civilizations.artemis_core": "§7Greek Core",
+  "tooltip.civilizations.artemis_core": "Summon §a§lArtemis",
   "item.civilizations.artemis_rune": "Rune of Artemis",
-  "entity.civilizations.boss_artemis": "Artemis",
+  "entity.civilizations.boss_artemis": "§a§lArtemis",
 
-  "item.civilizations.egypt_core": "Egyptian Core",
-  "item.civilizations.anubis_core": "Egyptian Core",
-  "tooltip.civilizations.anubis_core": "Summon Anubis",
+  "item.civilizations.egypt_core": "§eEgyptian Core",
+  "item.civilizations.anubis_core": "§eEgyptian Core",
+  "tooltip.civilizations.anubis_core": "Summon §8§lAnubis",
   "item.civilizations.anubis_rune": "Rune of Anubis",
-  "entity.civilizations.boss_anubis": "Anubis",
+  "entity.civilizations.boss_anubis": "§e§lAnubis",
 
-  "item.civilizations.rome_core": "Roman Core",
-  "item.civilizations.mercury_core": "Roman Core",
-  "tooltip.civilizations.mercury_core": "Summon Mercury",
+  "item.civilizations.rome_core": "§4Roman Core",
+  "item.civilizations.mercury_core": "§4Roman Core",
+  "tooltip.civilizations.mercury_core": "Summon §e§lMercury",
   "item.civilizations.mercury_rune": "Rune of Mercury",
-  "entity.civilizations.boss_mercury": "Mercury",
+  "entity.civilizations.boss_mercury": "§e§lMercury",
 
-  "item.civilizations.china_core": "Chinese Core",
-  "item.civilizations.wukong_core": "Chinese Core",
-  "tooltip.civilizations.wukong_core": "Summon Wukong",
+  "item.civilizations.china_core": "§8Chinese Core",
+  "item.civilizations.wukong_core": "§8Chinese Core",
+  "tooltip.civilizations.wukong_core": "Summon §4§lWukong",
   "item.civilizations.wukong_rune": "Rune of Wukong",
-  "entity.civilizations.boss_wukong": "Sun Wukong",
+  "entity.civilizations.boss_wukong": "§4§lSun Wukong",
 
-  "item.civilizations.nordic_core": "Norse Core",
-  "item.civilizations.loki_core": "Norse Core",
-  "tooltip.civilizations.loki_core": "Summon Loki",
+  "item.civilizations.nordic_core": "§1Norse Core",
+  "item.civilizations.loki_core": "§1Norse Core",
+  "tooltip.civilizations.loki_core": "Summon §6§lLoki",
   "item.civilizations.loki_rune": "Rune of Loki",
-  "entity.civilizations.boss_loki": "Loki",
+  "entity.civilizations.boss_loki": "§c§lLoki",
   "entity.civilizations.boss_loki_clone": "Loki",
 
-  "item.civilizations.artemis_bow": "Artemis' Bow",
-  "item.civilizations.anubis_ankh": "Anubis' Ankh",
-  "item.civilizations.mercury_boots": "The Talaria of Mercury",
-  "item.civilizations.loki_necklace": "Loki's Necklace",
-  "item.civilizations.wukong_sword": "Ruyi Jingu Bang",
+  "item.civilizations.artemis_bow": "§2Artemis' Bow",
+  "item.civilizations.anubis_ankh": "§eAnubis' Ankh",
+  "item.civilizations.mercury_boots": "§7The Talaria of Mercury",
+  "item.civilizations.loki_necklace": "§8Loki's Necklace",
+  "item.civilizations.wukong_sword": "§4Ruyi Jingu Bang",
 
   "filled_map.nordic": "Norse Map",
   "filled_map.greece": "Ancient Greek Map",
