Added enchanted book achievement Fixed cores levitation for other players Changed wukong altar

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -138,6 +138,9 @@
   "advancements.civilizations_all.title": "Mr Worldwide",
   "advancements.civilizations_all.description": "Discover all civilizations",
 
+  "advancements.civilizations_book.title": "Sage",
+  "advancements.civilizations_book.description": "Craft an enchanted book using papyrus",
+
   "advancements.civilizations_egypt_find.title": "Ancient Egypt",
   "advancements.civilizations_egypt_find.description": "Discover the Ancient Egyptian Civilization",
   "advancements.civilizations_egypt_trade.title": "Good business",
